# lab-project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.claude/: session-2025-10-07.md  (+2 more)
nakamura-misaki/: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_STATUS.md  README.md  V5_MIGRATION_SUMMARY.md  coverage.xml  pyproject.toml  requirements.txt
nakamura-misaki/.kiro/steering/: product.md  tech.md
nakamura-misaki/admin-ui/: flake.nix  package.json
nakamura-misaki/admin-ui/src/app/: error.tsx  layout.tsx  page.tsx
nakamura-misaki/admin-ui/src/components/: navigation.tsx
nakamura-misaki/admin-ui/src/lib/: api.ts  error-logger.ts
nakamura-misaki/alembic/: env.py
nakamura-misaki/alembic/versions/: 001_initial_schema.py  002_add_tasks_table.py  79bb97c4352b_add_workforce_management_tables.py
nakamura-misaki/claudedocs/: v5-migration-plan.md
nakamura-misaki/config/prompts/: default.json  schedule.json  technical.json
nakamura-misaki/docs/: ARCHITECTURAL_PROPOSAL_2025-10-14.md  ARCHITECTURE_V4.md  CURRENT_STATE_2025-10-14.md  IMPLEMENTATION_STATUS.md  PRESS_RELEASE.md
nakamura-misaki/features/phase-0-system-prompt/: requirements.md
nakamura-misaki/features/phase-1-database/: design.md
nakamura-misaki/features/phase-2-task-api/: requirements.md  tasks.md
nakamura-misaki/features/phase-3-handoff/: requirements.md
nakamura-misaki/features/phase-4-team-hub/: design.md  tasks.md
nakamura-misaki/scripts/: import_skill_sheet.py  init_db.py  send_reminders.py  setup-pre-commit.sh
nakamura-misaki/specs/: PHASE1_SPECIFY.md
nakamura-misaki/src/adapters/: __init__.py
nakamura-misaki/src/adapters/primary/: __init__.py  api.py  dependencies.py  handoff_command_parser.py  handoff_response_formatter.py  slack_event_handler.py  slack_event_handler_v4_backup.py  task_command_parser.py  task_response_formatter.py
nakamura-misaki/src/adapters/secondary/: claude_adapter.py  postgresql_conversation_repository.py  postgresql_handoff_repository.py  postgresql_note_repository.py  postgresql_task_repository.py  prompt_repository_adapter.py  session_store_adapter.py  slack_adapter.py
nakamura-misaki/src/application/: __init__.py
nakamura-misaki/src/application/commands/: __init__.py  chat_command.py
nakamura-misaki/src/application/dto/: __init__.py  handoff_dto.py  task_dto.py
nakamura-misaki/src/application/use_cases/: __init__.py  complete_handoff.py  complete_task.py  detect_bottleneck.py  query_handoffs_by_user.py  query_team_stats.py  query_today_tasks.py  query_user_tasks.py  register_handoff.py  register_task.py  send_handoff_reminder.py  update_task.py
nakamura-misaki/src/infrastructure/: config.py  di.py  note_store.py
nakamura-misaki/src/workers/: __init__.py  claude_worker.py
nakamura-misaki/tests/e2e/: test_handoff_lifecycle.py  test_task_lifecycle.py
nakamura-misaki/tests/integration/: test_postgresql_conversation_repository.py  test_postgresql_handoff_repository.py  test_postgresql_note_repository.py  test_postgresql_task_repository.py
nakamura-misaki/tests/unit/: test_claude_agent_service.py  test_complete_task_use_case.py  test_conversation_manager.py  test_conversation_model.py  test_handoff_command_parser.py  test_handoff_model.py  test_note_model.py  test_register_handoff_use_case.py  test_register_task_use_case.py  test_send_handoff_reminder_use_case.py  test_task_command_parser.py  test_task_model.py  test_task_tools.py  test_update_task_tool.py
projects/nakamura-misaki/: .pre-commit-config.yaml  CLAUDE.md  PROJECT_STATUS.md  README.md  admin-ui.nix  coverage.xml  flake.nix  pyproject.toml  requirements.txt  service.nix
projects/nakamura-misaki/admin-ui/: package-lock.json
projects/nakamura-misaki/claudedocs/: IMPLEMENTATION_PLAN_PHASE1-4.md  INTEGRATION_PLAN.md  deployment-db-init-issue.md  testing-strategy.md
projects/nakamura-misaki/docs/: IMPLEMENTATION_PLAN.md  PHASE5_IMPLEMENTATION_PLAN.md
projects/nakamura-misaki/nakamura-misaki/: .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  requirements.txt
projects/nakamura-misaki/scripts/: __init__.py  init_db.py
projects/nakamura-misaki/specs/: PHASE1_TASKS.md
projects/nakamura-misaki/src/: main.py
projects/nakamura-misaki/web-ui/: flake.nix  next.config.ts  package-lock.json  package.json
(+504 files in other folders)
