[project]
name = "nakamura-misaki"
version = "4.0.0"
description = "nakamura-misaki v4.0.0 - Task management AI assistant with Kusanagi Motoko personality"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.31.0",  # Relaxed from 3.37.0 for nixpkgs compatibility
    # "claude-agent-sdk>=0.1.3",  # Not in nixpkgs, installed separately via uv
    "anthropic>=0.37.0",
    "aiohttp>=3.10.0",  # Relaxed from 3.13.0 for nixpkgs compatibility
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term --cov-report=xml"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/infrastructure/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
